src/test/ui/closures/2229_closure_analysis/diagnostics/closure-origin-array-diagnostics.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
  --> $DIR/closure-origin-array-diagnostics.rs:9:13
   |
LL |     let c = || {
   |             ^^ this closure implements `FnOnce`, not `Fn`
LL |         let [_, _s] = s;
   |                       - closure is `FnOnce` because it moves the variable `s` out of its environment
LL |     };
LL |     expect_fn(c);
   |     --------- the requirement to implement `Fn` derives from here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0525`.
